--- a/src/app/modules/user/scheduler/scheduler.component.html
+++ b/src/app/modules/user/scheduler/scheduler.component.html
@@ -1,1 +1,25 @@
-<p>scheduler works!</p>
+<div class="content-wrap">
+    <ngb-datepicker [startDate]="currentDate" [(ngModel)]="currentDate" #d></ngb-datepicker>
+
+    <div class="create-event-wrap">
+        <p>
+            <button type="button" class="btn btn-outline-primary" (click)="collapsed()"
+                [attr.aria-expanded]="!isCollapsed" aria-controls="collapseExample">
+                Add event
+            </button>
+        </p>
+        <div class="collapseForm" [ngbCollapse]="isCollapsed">
+            <div class="card">
+                <div class="card-body">
+                    <ngb-timepicker [(ngModel)]="newEvent.time"></ngb-timepicker>
+                    <input [(ngModel)]="newEvent.text" class="create-event-text form-control form-control-sm" type="text" placeholder="Text...">
+                    <button (click)="addNewEvent()" type="button" class="create-event-button btn btn-primary">Add</button>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div>
+    <app-scheduler-event-nav></app-scheduler-event-nav>
+</div>
