--- a/src/app/shared/layouts/user-layout/user-layout.component.html
+++ b/src/app/shared/layouts/user-layout/user-layout.component.html
@@ -1,25 +1,31 @@
 <div class="main-content-wrap">
   <app-header></app-header>
   <div class="content-wrap">
+
     <div class="sidebar-wrap">
-      <div>
+      <div class="top-menu">
+        <span class="title">- Dashboard -</span>
         <ul class="nav flex-column">
-          <li class="nav-item">
-            <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Dashboard</a>
-          </li>
           <li class="nav-item">
             <a class="nav-link active" href="#">Active</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="user/scheduler">Scheduler</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="user/medicine">Medicine</a>
+          </li>
         </ul>
-
       </div>
       <div class="settings-wrap">
-        <a routerLink="#"><fa-icon [icon]="faCogs" class="fa-2x"></fa-icon></a>
+        <div class="icon-wrap">
+          <a routerLink="#">
+            <fa-icon [icon]="faCogs" class="fa-2x"></fa-icon>
+          </a>
+        </div>
       </div>
     </div>
+
     <div class="sub-content">
       <router-outlet></router-outlet>
     </div>
