--- a/src/app/shared/layouts/user-layout/user-layout.component.scss
+++ b/src/app/shared/layouts/user-layout/user-layout.component.scss
@@ -1,5 +1,5 @@
 .main-content-wrap {
-    background: url("../../../../assets/images/user/scheduler-bg.jpg");
+    // background: url("../../../../assets/images/user/scheduler-bg.jpg");
     background-size: cover;
     height: 100%;
 
@@ -16,7 +16,7 @@
             justify-content: space-between;
             background-color: rgba(0, 0, 0, 0.9);
             background: rgba(0, 0, 0, 0.9);
-            color: rgba(0, 0, 0, 0.9);  
+            color: rgba(0, 0, 0, 0.9);
 
             ::ng-deep .nav {
                 .nav-item {
@@ -25,12 +25,48 @@
                 }
             }
 
-            .settings-wrap {
+            .top-menu {
                 text-align: center;
+                margin-top: 15px;
+
+                .title {
+                    color: white;
+                }
+                ul {
+                    margin-top: 40%;
+                }
+            }
+
+            .nav {
+                .nav-item {
+                    .nav-link:hover {
+                        -webkit-box-shadow: 0px 0px 5px 0px rgba(67, 237, 29, 1);
+                        -moz-box-shadow: 0px 0px 5px 0px rgba(67, 237, 29, 1);
+                        box-shadow: 0px 0px 5px 0px rgba(67, 237, 29, 1);
+                    }
+                }
+            }
+
+            .settings-wrap {
+                margin-bottom: 20px;
+                text-align: center;
+                .icon-wrap {
+                    border-radius: 50px;
+                    padding: 7px 12px;
+                    display: inline-flex;
+                    border: 1px solid transparent;
+                }
+                .icon-wrap:hover {
+                    cursor: pointer;
+                    -webkit-box-shadow: 0px 0px 5px 0px rgba(67, 237, 29, 1);
+                    -moz-box-shadow: 0px 0px 5px 0px rgba(67, 237, 29, 1);
+                    box-shadow: 0px 0px 5px 0px rgba(67, 237, 29, 1);
+                }
             }
         }
 
         .sub-content {
+            padding-top: 12px;
             flex-grow: 1;
             background-color: rgba(255, 255, 255, 0.6);
             background: rgba(255, 255, 255, 0.6);
