--- a/client/src/app/shared/components/layouts/index-layout/index-layout.component.scss
+++ b/client/src/app/shared/components/layouts/index-layout/index-layout.component.scss
@@ -1,8 +1,8 @@
 #index-modal-container {
     // background: url("src/assets/images/background-img.jpg");
     //background: url("@assets/images/background-img.jpg");
-    background: url("../../../../assets/images/background-img.jpg");
-  
+    background: url("../../../../../assets/images/background-img.jpg");
+
     position: fixed;
     display: table;
     height: 100%;
