--- a/client/src/app/modules/user/scheduler/scheduler.component.html
+++ b/client/src/app/modules/user/scheduler/scheduler.component.html
@@ -17,18 +17,15 @@
                         </div>
 
                         <input [(ngModel)]="newEvent.text" class="create-event-text form-control form-control-sm"
-                            type="text" placeholder="Text...">
+                            type="text" placeholder="Event...">
                         <button (click)="addNewEvent()" type="button"
                             class="create-event-button btn btn-primary">Add</button>
                     </div>
                 </div>
             </div>
         </div>
-
     </div>
     <div class="right-part">
         <app-scheduler-event-nav></app-scheduler-event-nav>
-
     </div>
-
 </div>
