--- a/client/src/app/shared/components/layouts/user-layout/user-layout.component.scss
+++ b/client/src/app/shared/components/layouts/user-layout/user-layout.component.scss
@@ -6,6 +6,7 @@
     .content-wrap {
         display: flex;
         height: calc(100% - 57px);
+        padding-top: 12px;
 
         .sidebar-wrap {
             width: 10%;
@@ -66,11 +67,11 @@
         }
 
         .sub-content {
-            padding-top: 12px;
             flex-grow: 1;
             background-color: rgba(255, 255, 255, 0.6);
             background: rgba(255, 255, 255, 0.6);
             color: rgba(255, 255, 255, 0.6);
+            padding-bottom: 12px;
         }
     }
 }
