--- a/client/src/app/modules/user/scheduler-event-nav/scheduler-event-nav.component.html
+++ b/client/src/app/modules/user/scheduler-event-nav/scheduler-event-nav.component.html
@@ -3,7 +3,7 @@
     <a ngbNavLink>Selected day</a>
     <ng-template ngbNavContent>
       <p>Selected</p>
-      <app-scheduler-event-table [eventsList]="forPerDayEvents"></app-scheduler-event-table>
+      <app-scheduler-event-table [(eventsList)]="forPerDayEvents"></app-scheduler-event-table>
 
     </ng-template>
   </li>
