--- a/client/src/app/modules/user/scheduler-event-table/scheduler-event-table.component.html
+++ b/client/src/app/modules/user/scheduler-event-table/scheduler-event-table.component.html
@@ -4,12 +4,12 @@
       <tr>
         <th scope="col">#</th>
         <th scope="col" sortable="date" (sort)="onSort($event)">Date</th>
-        <th scope="col" sortable="description" (sort)="onSort($event)">Description</th>
+        <th scope="col" >Description</th>
         <th scope="col">Actions</th>
       </tr>
     </thead>
     <tbody>
-      <tr *ngFor="let event of events; index as i">
+      <tr *ngFor="let event of events; index as i" [style.background-color]="event.isActive ? 'green': 'red'">
         <th scope="row">{{ i + 1 }}</th>
         <td>
           {{ event.date | date:'MMMM d, y, h:mm:ss a' }}
@@ -18,9 +18,7 @@
           {{ event.text }}
         </td>
         <td>
-          <button >Deactive</button>
           <button (click)="delete(event._id)">Delete</button>
-
         </td>
       </tr>
     </tbody>
