--- a/client/src/app/modules/user/scheduler/scheduler.component.html
+++ b/client/src/app/modules/user/scheduler/scheduler.component.html
@@ -1,5 +1,5 @@
 <div class="content-wrap">
-    <div class="left-part">
+    <div class="left-part text-center">
         <ngb-datepicker [startDate]="markedDate" [(ngModel)]="markedDate" (dateSelect)="dateSelect()" #d>
         </ngb-datepicker>
         <div class="create-event-wrap">
