--- a/client/src/app/shared/components/layouts/user-layout/user-layout.component.html
+++ b/client/src/app/shared/components/layouts/user-layout/user-layout.component.html
@@ -3,7 +3,7 @@
   <div class="content-wrap">
 
     <div class="sidebar-wrap">
-      <div class="top-menu">
+      <div class="top-menu text-center">
         <span class="title">- Dashboard -</span>
         <ul class="nav flex-column">
           <li class="nav-item">
@@ -17,7 +17,7 @@
           </li>
         </ul>
       </div>
-      <div class="settings-wrap">
+      <div class="settings-wrap text-center">
         <div class="icon-wrap">
           <a routerLink="#">
             <fa-icon [icon]="faCogs" class="fa-2x"></fa-icon>
