--- a/client/src/app/modules/user/scheduler/scheduler.component.scss
+++ b/client/src/app/modules/user/scheduler/scheduler.component.scss
@@ -3,7 +3,7 @@
     display: flex;
     .left-part {
         width: 50%;
-        text-align: center;
+        //text-align: center;
         padding: 0 20px;
         .create-event-wrap {
             p {
