--- a/client/src/app/modules/user/scheduler/scheduler.component.html
+++ b/client/src/app/modules/user/scheduler/scheduler.component.html
@@ -22,7 +22,7 @@
                         <div class="text-wrap">
                             <input [(ngModel)]="eventText" [style.border]="eventText === '' ? '2px solid red': ''"
                                 class="create-event-text form-control form-control-sm" type="text"
-                                placeholder="Event...">
+                                placeholder="Enter event...">
                         </div>
                         <div>
                             <button
