--- a/client/src/app/shared/components/layouts/user-layout/user-layout.component.scss
+++ b/client/src/app/shared/components/layouts/user-layout/user-layout.component.scss
@@ -6,7 +6,6 @@
     .content-wrap {
         display: flex;
         height: calc(100% - 57px);
-        padding-top: 12px;
 
         .sidebar-wrap {
             width: 10%;
@@ -69,7 +68,7 @@
             background-color: rgba(255, 255, 255, 0.6);
             background: rgba(255, 255, 255, 0.6);
             color: rgba(255, 255, 255, 0.6);
-            padding-bottom: 12px;
+            padding: 12px 0;
         }
     }
 }
