--- a/client/src/app/shared/components/layouts/user-layout/user-layout.component.html
+++ b/client/src/app/shared/components/layouts/user-layout/user-layout.component.html
@@ -7,13 +7,13 @@
         <span class="title">- Dashboard -</span>
         <ul class="nav flex-column">
           <li class="nav-item">
-            <a class="nav-link active" href="#">Active</a>
+            <a class="nav-link active" routerLink="">Active</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="user/scheduler">Scheduler</a>
+            <a class="nav-link" routerLink="scheduler">Scheduler</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="user/medicine">Medicine</a>
+            <a class="nav-link" routerLink="medicine">Medicine</a>
           </li>
         </ul>
       </div>
