--- a/client/src/app/shared/components/layouts/index-layout/index-layout.component.html
+++ b/client/src/app/shared/components/layouts/index-layout/index-layout.component.html
@@ -1,4 +1,16 @@
 <div id="index-modal-container">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
+            aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+            <div class="navbar-nav">
+                <a class="nav-item nav-link" routerLink="/login">LogIn</a>
+                <a class="nav-item nav-link" routerLink="/register">Register</a>
+            </div>
+        </div>
+    </nav>
 
     <div class="modal-background">
 
