--- a/client/src/app/shared/components/layouts/index-layout/index-layout.component.scss
+++ b/client/src/app/shared/components/layouts/index-layout/index-layout.component.scss
@@ -16,7 +16,7 @@
   &.main-content {
     transform: scaleY(0.01) scaleX(0);
     animation: unfoldIn 2s cubic-bezier(0.165, 0.84, 0.44, 1) forwards;
-    animation-delay: 0.5s;
+    animation-delay: 1.5s;
   }
 
   nav.bg-light {
@@ -49,7 +49,7 @@
     text-align: center;
 
     //3D transform
-    .title-anim-wrap {
+    .anim-wrap {
       perspective: 300px;
       width: 50%;
       margin: auto;
@@ -79,7 +79,6 @@
         transform-origin: bottom;
         animation: show-main-title 1s forwards;
         animation-delay: 3s;
-        // animation-timing-function: cubic-bezier(1, 0.01, 1, 1);
         animation-timing-function: cubic-bezier(1, 0.01, 1, 1);
 
         overflow: hidden;
@@ -95,17 +94,6 @@
         80% {
           background: black;
         }
-        // 90%{
-        //   transform: rotateX(-105deg);
-        // }
-        // 95%{
-        //   transform: rotateX(-90deg);
-
-        // }
-        // 100%{
-        //   transform: rotateX(-105deg);
-        // }
-
         100% {
           transform: rotateX(-105deg);
           background: transparent;
