--- a/client/src/app/shared/components/login/login.component.html
+++ b/client/src/app/shared/components/login/login.component.html
@@ -1,1 +1,29 @@
-<p>login works!</p>
+<div class="login-form-wrap">
+  <form [formGroup]="loginForm" class="text-center">
+    <div>
+      <label class="form-title">Login</label>
+    </div>
+    <div class="form-group">
+      <input formControlName="email" type="email" class="form-control" placeholder="Email address...">
+        <div *ngIf="email?.errors?.required && loginForm.controls['email'].touched" class="alert alert-danger">
+          Email is required.
+        </div>
+        <div *ngIf="email?.errors?.pattern" class="alert alert-danger">
+          Format must be like : test@test.com
+        </div>
+    </div>
+    <div class="form-group">
+      <input formControlName="password" type="password" class="form-control" placeholder="Password...">
+      <div *ngIf="password?.errors?.required && loginForm.controls['password'].touched" class="alert alert-danger">
+        Password is required !
+      </div>
+      <div *ngIf="password?.errors?.minlength && loginForm.controls['password'].touched" class="alert alert-danger">
+        Error Password min length {{password?.errors?.minlength.requiredLength}} characters !
+      </div>
+      <div *ngIf="password?.errors?.maxlength" class="alert alert-danger">
+        Error Password max length {{password?.errors?.maxlength.requiredLength}} characters !
+      </div>
+    </div>
+    <button [disabled]="!loginForm.valid" type="button" (click)="login()" class="btn btn-primary">Submit</button>
+  </form>
+</div>
