--- a/client/src/app/shared/components/layouts/user-layout/user-layout.component.scss
+++ b/client/src/app/shared/components/layouts/user-layout/user-layout.component.scss
@@ -8,6 +8,7 @@
         height: calc(100% - 57px);
 
         .sidebar-wrap {
+            min-width: 135px;
             width: 10%;
             height: 100%;
             border-right: 1px solid;
@@ -38,11 +39,25 @@
 
             .nav {
                 .nav-item {
-                    .nav-link:hover {
-                        -webkit-box-shadow: 0px 0px 5px 0px rgba(67, 237, 29, 1);
-                        -moz-box-shadow: 0px 0px 5px 0px rgba(67, 237, 29, 1);
-                        box-shadow: 0px 0px 5px 0px rgba(67, 237, 29, 1);
+                    padding: 0.5rem 1rem;
+                    .nav-link {
+                        padding: 0;
+                        color: white;
+                        letter-spacing: 2px;
                     }
+                    .nav-link.active {
+                        -webkit-box-shadow: 0px 0px 3px 0px rgba(255, 255, 255, 1);
+                        -moz-box-shadow: 0px 0px 3px 0px rgba(255, 255, 255, 1);
+                        box-shadow: 0px 0px 3px 0px rgba(255, 255, 255, 1);
+                    }
+                }
+
+                .nav-item:hover > .nav-link {
+                    -webkit-box-shadow: 0px 0px 5px 2px rgba(255, 255, 255, 1);
+                    -moz-box-shadow: 0px 0px 5px 2px rgba(255, 255, 255, 1);
+                    box-shadow: 0px 0px 5px 2px rgba(255, 255, 255, 1);
+                    transform: scale(1.1);
+                    transition: all 0.2s;
                 }
             }
 
