--- a/client/src/app/shared/components/user/header/header.component.scss
+++ b/client/src/app/shared/components/user/header/header.component.scss
@@ -9,7 +9,11 @@
         .navbar-nav {
             .nav-item {
                 .nav-link {
+                    cursor: pointer;
                     color: white;
+                    &.user-info {
+                        cursor: default;
+                    }
                 }
             }
         }
