--- a/client/src/app/shared/components/index/index.component.html
+++ b/client/src/app/shared/components/index/index.component.html
@@ -1,2 +1,22 @@
+<div id="index-modal-container">
+    <div class="modal-background">
+        <div class="anim-wrap">
+            <div class="title-text-wrap">
+                <span class="title-text">{{titleText}}</span>
+            </div>
+            <div class="opening-door">
+                <!-- <span class="opening-door-text">
+                    .............................................................................................................................
+                    .............................................................................................................................
+                    .............................................................................................................................
+                    .............................................................................................................................
+                    .............................................................................................................................
+                    .............................................................................................................................
+                    .............................................................................................................................
+                </span> -->
 
-<h1>INDEX </h1>
+            </div>
+        </div>
+    </div>
+
+</div>
