--- a/client/src/app/shared/components/layouts/index-layout/index-layout.component.html
+++ b/client/src/app/shared/components/layouts/index-layout/index-layout.component.html
@@ -1,38 +1,36 @@
 <app-loader></app-loader>
 
-<div id="index-modal-container">
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
-            aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+<div class="main-container">
+    <nav class="navbar navbar-expand-lg navbar-dark">
+        <a class="navbar-brand" routerLink="/"><strong>Navbar</strong></a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-            <div class="navbar-nav">
-                <a class="nav-item nav-link" routerLink="/login">LogIn</a>
-                <a class="nav-item nav-link" routerLink="/register">Register</a>
-            </div>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link" routerLink="/login">LogIn</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" routerLink="/register">Register</a>
+                </li>
+            </ul>
+            <ul class="navbar-nav nav-flex-icons">
+                <li class="nav-item">
+                    <a class="nav-link"><i class="fab fa-facebook-f"></i></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link"><i class="fab fa-twitter"></i></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link"><i class="fab fa-instagram"></i></a>
+                </li>
+            </ul>
         </div>
     </nav>
-    <div class="modal-background">
-        <div class="anim-wrap">
-            <div class="title-text-wrap">
-                <span class="title-text">{{titleText}}</span>
-            </div>
-            <div class="opening-door">
-                <span class="opening-door-text">
-                    .............................................................................................................................
-                    .............................................................................................................................
-                    .............................................................................................................................
-                    .............................................................................................................................
-                    .............................................................................................................................
-                    .............................................................................................................................
-                    .............................................................................................................................
-                </span>
-            </div>
-        </div>
-    </div>
-
     <div>
         <router-outlet></router-outlet>
     </div>
 </div>
+
