--- a/client/src/app/shared/components/layouts/user-layout/user-layout.component.scss
+++ b/client/src/app/shared/components/layouts/user-layout/user-layout.component.scss
@@ -80,8 +80,7 @@
 
         .sub-content {
             flex-grow: 1;
-            background-color: rgba(255, 255, 255, 0.6);
-            background: rgba(255, 255, 255, 0.6);
+            background: white;
             color: rgba(255, 255, 255, 0.6);
             padding: 12px 0;
         }
