--- a/client/src/app/shared/components/user/header/header.component.html
+++ b/client/src/app/shared/components/user/header/header.component.html
@@ -6,10 +6,10 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item active">
-          <a class="nav-link" href="#">Hello Alex...</a>
+          <a class="nav-link user-info">{{email}}</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">LogOut</a>
+          <a class="nav-link" (click)="logout()">LogOut</a>
         </li>
       </ul>
     </div>
