--- a/client/src/app/shared/components/user/header/header.component.scss
+++ b/client/src/app/shared/components/user/header/header.component.scss
@@ -2,6 +2,13 @@
     background-color: rgba(0, 0, 0, 0.9);
     background: rgba(0, 0, 0, 0.9);
     color: rgba(0, 0, 0, 0.9);
+    border-bottom: 1px solid white;
+
+    
+
+    .navbar-toggler {
+        background-color: white;
+    }
 
     #navbarNav {
         justify-content: flex-end;
@@ -16,6 +23,12 @@
                     }
                 }
             }
+        }
+    }
+
+    @media (max-width: 991px) {
+        #navbarNav {
+            padding-top: 20px;
         }
     }
 }
