add auth result modals

--- a/client/src/app/shared/components/layouts/index-layout/index-layout.component.scss
+++ b/client/src/app/shared/components/layouts/index-layout/index-layout.component.scss
@@ -2,7 +2,9 @@
   height: 100%;
   background-color: black;
   background: url("../../../../../assets/images/space2.jpg");
-
+  display: flex;
+  flex-direction: column;
+  
   .navbar {
     z-index: 2;
   }
