--- a/client/src/app/shared/components/login/login.component.html
+++ b/client/src/app/shared/components/login/login.component.html
@@ -5,12 +5,12 @@
     </div>
     <div class="form-group">
       <input formControlName="email" type="email" class="form-control" placeholder="Email address...">
-        <div *ngIf="email?.errors?.required && loginForm.controls['email'].touched" class="alert alert-danger">
-          Email is required.
-        </div>
-        <div *ngIf="email?.errors?.pattern" class="alert alert-danger">
-          Format must be like : test@test.com
-        </div>
+      <div *ngIf="email?.errors?.required && loginForm.controls['email'].touched" class="alert alert-danger">
+        Email is required.
+      </div>
+      <div *ngIf="email?.errors?.pattern" class="alert alert-danger">
+        Format must be like : test@test.com
+      </div>
     </div>
     <div class="form-group">
       <input formControlName="password" type="password" class="form-control" placeholder="Password...">
@@ -24,11 +24,11 @@
         Error Password max length {{password?.errors?.maxlength.requiredLength}} characters !
       </div>
     </div>
-    <button [disabled]="!loginForm.valid || message.isError" type="button" (click)="login()" class="btn btn-primary">Submit</button>
+    <button [disabled]="!loginForm.valid || message.isError" type="button" (click)="login()"
+      class="btn btn-primary">Submit</button>
   </form>
 
   <p *ngIf="message.isError" (ngModel)="message.isError" class="authError-wrap">
     <ngb-alert type="danger" (close)="closeError()">{{message.text}}</ngb-alert>
   </p>
-  
 </div>
