--- a/client/src/app/shared/components/modals/auth-modal/auth-modal.component.html
+++ b/client/src/app/shared/components/modals/auth-modal/auth-modal.component.html
@@ -1,24 +1,8 @@
-<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#staticBackdrop">
-  Launch static backdrop modal
-</button>
 
-<!-- Modal -->
-<div class="modal fade" id="staticBackdrop" data-backdrop="static" data-keyboard="false" tabindex="-1" role="dialog" aria-labelledby="staticBackdropLabel" aria-hidden="true">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="staticBackdropLabel">Modal title</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body">
-        ...
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Understood</button>
-      </div>
-    </div>
-  </div>
+<h1 mat-dialog-title>{{data.title}}</h1>
+<div mat-dialog-content class="text-center">{{data.text}}</div>
+<div mat-dialog-actions>
+  <button mat-button mat-dialog-close class="btn btn-primary">Ok</button>
 </div>
+
+
