--- a/client/src/app/shared/components/register/register.component.html
+++ b/client/src/app/shared/components/register/register.component.html
@@ -66,14 +66,6 @@
       </div>
     </div>
     <div class="form-group">
-      <button [disabled]="registerForm.invalid || message.isError" class="btn btn-primary">Register</button>
+      <button [disabled]="registerForm.invalid" class="btn btn-primary">Register</button>
     </div>
   </form>
-
-  <p *ngIf="message.isError" (ngModel)="message.isError" class="authError-wrap">
-    <ngb-alert type="danger" (close)="closeError()">{{message.text}}</ngb-alert>
-  </p>
-
-  <app-auth-modal></app-auth-modal>
-
-</div>
