--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -1,4 +1,5 @@
 @import "~bootstrap/scss/bootstrap.scss";
+
 body{
     background-color: black !important;
 }
@@ -13,3 +14,5 @@ html, body{
         color:red;
     }
 }
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
